--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -173,7 +173,17 @@
                     <h2><i class="fa-solid fa-house-laptop"></i>Experiencia Laboral </h2>
                 </div>
                 <div class="row shadow rounded bg-white">
-                    <p></p>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-2">
+                                <img src="../portfolio/images/coto.svg" alt="" class="img-fluid">
+                            </div>
+                            <div class="col-12 col-sm-10">
+                                <h2>Empleado</h2>
+                                <h3>Cadete/Cajero</h3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
