--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -175,17 +175,128 @@
                 <div class="row shadow rounded bg-white">
                     <div class="col-12">
                         <div class="row">
-                            <div class="col-2">
-                                <img src="../portfolio/images/coto.svg" alt="" class="img-fluid">
+                            <div class="col-2 p-3">
+                                <img src="../portfolio/images/coto.svg" alt="" class="img-fluid gris">
                             </div>
-                            <div class="col-12 col-sm-10">
+                            <div class="col-12 col-sm-10 p-3">
                                 <h2>Empleado</h2>
                                 <h3>Cadete/Cajero</h3>
+                                <h3>COTO C.I.C.S.A</h3>
+                                <h4>2015-2021</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat omnis atque deleniti
+                                    laboriosam provident unde veniam saepe recusandae, maiores natus quibusdam
+                                    laudantium odit ducimus voluptatibus facere animi nemo facilis numquam? Lorem ipsum
+                                    dolor sit amet consectetur, adipisicing elit. Iusto mollitia sint ut quis dolorem
+                                    natus soluta, fuga placeat dolores repellendus, vel a vero debitis quo et atque
+                                    officiis ab odio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+                                    alias illum sit ipsum modi sequi ipsa, architecto eaque veniam voluptates sint in
+                                    non mollitia? Ut debitis eveniet dolor aliquid cum! Lorem ipsum dolor sit amet
+                                    consectetur adipisicing elit. Hic nemo doloribus labore quos deleniti reiciendis
+                                    enim ab itaque nobis inventore quas, illum eaque magni architecto vel? Facere quo
+                                    nihil sint!</p>
+                            </div>
+
+                        </div>
+                        <div class="row">
+                            <div class="col-2 p-3">
+                                <img src="../portfolio/images/mensajeria.jpg" alt="" class="img-fluid gris">
+                            </div>
+                            <div class="col-12 col-sm-10 p-3">
+                                <h2>Coordinador</h2>
+                                <h3>Encargado/Cadete</h3>
+                                <h3>Mensajeria Zona Oeste</h3>
+                                <h4>2021-2022</h4>
+                                <p>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis, illum omnis
+                                    tempore laborum nihil hic itaque a delectus minus non quaerat porro. Dolore nihil
+                                    voluptas saepe illo consequuntur nulla quos!Lorem Lorem ipsum dolor sit amet
+                                    consectetur adipisicing elit. Distinctio velit quisquam numquam illum ipsum adipisci
+                                    explicabo dolore, consectetur laboriosam aperiam nisi laborum veniam corrupti iste
+                                    fugit. Possimus et magni dicta!
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+        </section>
+        <section id="formacion" class="container">
+            <div class="row">
+                <div class="col-12 mt-3">
+                    <h2><i class="fa-solid fa-school"></i>Educacion</h2>
+                </div>
+                <div class="row shadow rounded bg-white">
+
+                    <div class="col-12 col-sm-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa-solid fa-graduation-cap "></i>
+
+                            </div>
+                            <div class="col-12 col-sm-10">
+                                <h3>Liceo Nro 12° Fray Mamerto Esquiu</h3>
+                                <h3>Titulo Secundario</h3>
+                                <h3>Bachiller</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aperiam veniam
+                                    repudiandae, eaque dolores minima ratione cumque consectetur sapiente facilis
+                                    similique, facere expedita magni provident voluptatum molestias rerum sequi ipsum?
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vel voluptas totam
+                                    illo fugiat nobis eligendi! Vero laboriosam, natus neque placeat, fugiat, voluptate
+                                    modi voluptas maiores libero nulla accusantium quia. </p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa-solid fa-graduation-cap "></i>
+
+                            </div>
+                            <div class="col-12 col-sm-10">
+                                <h3>Liceo Nro 12° Fray Mamerto Esquiu</h3>
+                                <h3>Titulo Secundario</h3>
+                                <h3>Bachiller</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aperiam veniam
+                                    repudiandae, eaque dolores minima ratione cumque consectetur sapiente facilis
+                                    similique, facere expedita magni provident voluptatum molestias rerum sequi ipsum?
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vel voluptas totam
+                                    illo fugiat nobis eligendi! Vero laboriosam, natus neque placeat, fugiat, voluptate
+                                    modi voluptas maiores libero nulla accusantium quia. </p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="col-12 col-sm-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa-solid fa-graduation-cap "></i>
+
+                            </div>
+                            <div class="col-12 col-sm-10">
+                                <h3>Liceo Nro 12° Fray Mamerto Esquiu</h3>
+                                <h3>Titulo Secundario</h3>
+                                <h3>Bachiller</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, aperiam veniam
+                                    repudiandae, eaque dolores minima ratione cumque consectetur sapiente facilis
+                                    similique, facere expedita magni provident voluptatum molestias rerum sequi ipsum?
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vel voluptas totam
+                                    illo fugiat nobis eligendi! Vero laboriosam, natus neque placeat, fugiat, voluptate
+                                    modi voluptas maiores libero nulla accusantium quia. </p>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+        <section id="cursosdesarrollo">
 
         </section>
 
