--- a/proyectos.html
+++ b/proyectos.html
@@ -77,7 +77,7 @@
             </div>
             <div class="col-12 col-sm-4 px-4 py-2">
                 <div class="row card">
-                    <div class="col-12">
+                    <div class="col-12 p-0">
                         <img src="../portfolio/images/abmventas.png" alt="" class="img-fluid">
                     </div>
                     <div class="col-12 color-gradiente py-3">
@@ -97,7 +97,7 @@
             </div>
             <div class="col-12 col-sm-4 px-4 py-2">
                 <div class="row card">
-                    <div class="col-12">
+                    <div class="col-12 p-0">
                         <img src="../portfolio/images/proyecto-integrador.png" alt="" class="img-fluid">
 
                     </div>
