--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -389,6 +389,50 @@
 
         </section>
 
+    <section id="idiomas">
+<div class="container">
+    <div class="row py-5 mx-0">
+        <div class="col-12 col-sm-6 pb-3 pb-sm-0">
+            <div class="row mr-sm-1 bg-white card-idioma shadow me-sm-1">
+               <div class="col-4 card text-center">
+                <i class="fa-brands fa-teamspeak"></i>
+
+               </div>
+               <div class="col-8 p-5">
+                <h2>IDIOMAS</h2>
+                <ul>
+                    <li>ESPAÑOL-Nativo</li>
+                    <li>INGLES- Basico Oral/Escrito</li>
+                </ul>
+
+               </div>
+            </div>
+
+        </div>
+    
+        <div class="col-12 col-sm-6 pb-3 pb-sm-0">
+            <div class="row mr-sm-1 bg-white card-idioma shadow me-sm-1">
+               <div class="col-4 card text-center">
+                <i class="fa-solid fa-dumbbell"></i>
+                
+
+               </div>
+               <div class="col-8 p-5">
+                <h2>HOBBIES</h2>
+                <ul>
+                    <li>Natacion</li>
+                    <li>Gymansio/Musculacion</li>
+                </ul>
+
+               </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+    </section>
+
 
     </main>
 
